use antd AutoComplete Component; harness mapquest api to set location and locationSuggestions

--- a/src/App/index.css
+++ b/src/App/index.css
@@ -12,3 +12,31 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+
+.input {
+  margin: 8px;
+  border: 2px solid lightgrey;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  height: 40px;
+  padding: 0 11px;
+  font-size: 14px;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+  color: "dark-grey";
+  width: 400px;
+  &:after {
+    content: '';
+    background: darkgrey;
+    width: 1px;
+    height: 19px;
+    margin: -1px 0 0 -1px;
+    display: none;
+    animation: blink 0.5s infinite alternate;
+  }
+  &:focus {
+    border-color: blue;
+    outline: none;
+  }
+}
